test/files/neg/t5689.check
t5689.scala:4: error: macro implementation has wrong shape:
 required: (c: scala.reflect.makro.Context)(i: c.Expr[Double]): c.Expr[String]
 found   : (c: scala.reflect.makro.Context)(i: c.Expr[Double]): c.Expr[Int]
type mismatch for return type : c.Expr[String] does not conform to c.Expr[Int]
  def returnsString(i: Double): String = macro returnsIntImpl
                                               ^
one error found
